swagger pour paymentcontroller
